issue #33: introduced JPSM into workflow (work commit)