@@ -19,6 +19,7 @@
         <info.appsubpath>my-killer-app/standard</info.appsubpath>
         <izpack.dir.app>${basedir}/src/main/izpack</izpack.dir.app>
         <staging.dir.app>${staging.dir}/appfiles</staging.dir.app>
+        <jpackager.path>${env.JAVA_HOME}/../jdk-14/bin/jpackage.exe</jpackager.path>
     </properties>
 
     <build>
@@ -39,123 +40,77 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.8.1</version>
                 <configuration>
-                    <target>11</target>
-                    <release>11</release>
+                    <compilerArgs>
+                        <arg>--add-exports</arg>
+                        <arg>javafx.graphics/com.sun.javafx.css=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.3</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>jlink</goal>
+                        </goals>
+                        <phase>package</phase>
+                        <configuration>
+                            <launcher>financer</launcher>
+                            <stripDebug>true</stripDebug>
+                            <mainClass>${app.main.class}</mainClass>
+                            <options>
+                                <option>--add-export</option>
+                                <option>javafx.graphics/com.sun.javafx.css=ALL-UNNAMED</option>
+                            </options>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.6.0</version>
+                <configuration>
+                    <mainClass>${app.main.class}</mainClass>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
                             <goal>java</goal>
                         </goals>
                     </execution>
-                </executions>
-                <configuration>
-                    <mainClass>${app.main.class}</mainClass>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.2.1</version>
-                <executions>
                     <execution>
-                        <phase>package</phase>
+                        <id>create-package</id>
                         <goals>
-                            <goal>shade</goal>
+                            <goal>exec</goal>
                         </goals>
-                        <configuration>
-                            <transformers>
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>${app.main.class}</mainClass>
-                                </transformer>
-                            </transformers>
-                            <finalName>financer-portable</finalName>
-                            <createDependencyReducedPom>false</createDependencyReducedPom>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>com.akathist.maven.plugins.launch4j</groupId>
-                <artifactId>launch4j-maven-plugin</artifactId>
-                <version>1.7.25</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>launch4j</goal>
-                        </goals>
-                        <configuration>
-                            <headerType>gui</headerType>
-                            <outfile>${project.build.directory}/financer-portable.exe</outfile>
-                            <jar>${project.build.directory}/financer-portable.jar</jar>
-                            <dontWrapJar>false</dontWrapJar>
-                            <classPath>
-                                <mainClass>${app.main.class}</mainClass>
-                            </classPath>
-                            <jre>
-                                <minVersion>1.8.0</minVersion>
-                            </jre>
-                            <icon>${project.basedir}/src/main/resources/images/icons/financer-icon.ico</icon>
-                            <versionInfo>
-                                <fileVersion>1.0.0.0</fileVersion>
-                                <txtFileVersion>1.0.0.0</txtFileVersion>
-                                <copyright>Copyright (c) 2019 Raphael Müßeler</copyright>
-                                <fileDescription>Financer is an Application that helps to manage all private expenses
-                                    and revenues.
-                                </fileDescription>
-                                <productVersion>1.0.0.0</productVersion>
-                                <txtProductVersion>${project.version}</txtProductVersion>
-                                <productName>Financer</productName>
-                                <internalName>financer</internalName>
-                                <originalFilename>Financer.exe</originalFilename>
-                            </versionInfo>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-antrun-plugin</artifactId>
-                <version>1.8</version>
-                <executions>
-                    <execution>
                         <phase>package</phase>
                         <configuration>
-                            <tasks>
-                                <mkdir dir="target/staging"/>
-                            </tasks>
+                            <executable>${jpackager.path}</executable>
+                            <workingDirectory>${project.build.directory}</workingDirectory>
+                            <longModulepath>false</longModulepath>
+                            <arguments>
+                                <!--                                <argument>&#45;&#45;package-type</argument>-->
+                                <!--                                <argument>exe</argument>-->
+                                <argument>--module</argument>
+                                <argument>${project.artifactId}/${app.main.class}</argument>
+                                <argument>--name</argument>
+                                <argument>Financer</argument>
+                                <argument>--input</argument>
+                                <argument>image</argument>
+                                <argument>--output</argument>
+                                <argument>deployment</argument>
+                                <argument>--runtime-image</argument>
+                                <argument>image</argument>
+                                <argument>--icon</argument>
+                                <argument>../src/main/resources/images/icons/financer-icon.ico</argument>
+                            </arguments>
                         </configuration>
-                        <goals>
-                            <goal>run</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.izpack</groupId>
-                <artifactId>izpack-maven-plugin</artifactId>
-                <version>5.1.3</version>
-                <configuration>
-                    <baseDir>${staging.dir}</baseDir>
-                    <finalName>financer</finalName>
-                    <classifier>installer</classifier>
-                    <mkdirs>true</mkdirs>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>izpack</goal>
-                        </goals>
                     </execution>
                 </executions>
             </plugin>
@@ -163,16 +118,10 @@
     </build>
 
     <dependencies>
-        <!-- JavaFX Dependencies -->
-        <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-controls</artifactId>
-            <version>11</version>
-        </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>11</version>
+            <version>11.0.2</version>
         </dependency>
 
         <dependency>
@@ -194,23 +143,23 @@
         <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
-            <version>9.0.0</version>
+            <version>11.0.0</version>
         </dependency>
         <dependency>
             <groupId>com.jfoenix</groupId>
             <artifactId>jfoenix</artifactId>
-            <version>9.0.8</version>
+            <version>9.0.9</version>
         </dependency>
         <dependency>
             <groupId>org.testfx</groupId>
             <artifactId>testfx-core</artifactId>
-            <version>4.0.15-alpha</version>
+            <version>4.0.16-alpha</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.testfx</groupId>
             <artifactId>testfx-junit5</artifactId>
-            <version>4.0.15-alpha</version>
+            <version>4.0.16-alpha</version>
             <scope>test</scope>
         </dependency>
         <dependency>
